--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -7,12 +7,11 @@ body {
 }
 
 
-
 .container {
     width: 100%;
     border-left: 5px solid black;
     text-align: center;
-    background-image: url(../images/fondo.jpeg);
+    background-image: url(../images/backgrundRigth.jpeg);
     background-size: 60%;
     display: flex;
     flex-direction: column;
@@ -25,9 +24,6 @@ h1 {
     -webkit-text-stroke: 2px black;
     color: white;
     margin: 30px auto;
-
-
-
 }
 
 h2 {
@@ -54,8 +50,6 @@ footer p {
     margin: 20px;
     -webkit-text-stroke: 2px black;
     color: white;
-
-
 }
 
 .score {
@@ -79,7 +73,6 @@ footer p {
     font-size: 1.9em;
     -webkit-text-stroke: 2px black;
     color: white;
-
 }
 
 .new-score-cont input {
@@ -99,7 +92,6 @@ footer p {
     font-size: 1.1em;
     width: 100px;
     margin: 0 auto;
-
 }
 
 .btn {
@@ -120,7 +112,6 @@ a {
     text-decoration: none;
     -webkit-text-stroke: 2px black;
 }
-
 
 
 .btn:hover {
@@ -148,8 +139,6 @@ a {
     -webkit-text-stroke: 2px black;
     color: white;
 }
-
-
 
 
 
